Fix reference to old name on homepage

--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
             document.body.classList.add(__theme);
         </script>
         <noscript>
-            Sorry, Javascript is required to use Retag.
+            Sorry, Javascript is required to use TagTime Web.
         </noscript>
         <div id="loading-msg" style="display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;min-height:100vh;background-color:white;">
             <!-- misc/loader/clock-min.svg -->
