add warning about not changing email

--- a/serv2/forms/register.html
+++ b/serv2/forms/register.html
@@ -22,11 +22,14 @@
         </div>
         <div>
             <label for="pw">Password: </label>
-            <input type="password" id="pw" name="pw">      
+            <input type="password" id="pw" name="pw">
         </div>
         <div>
             <label for="pw">Repeat password: </label>
-            <input type="password" id="pw2" name="pw2">      
+            <input type="password" id="pw2" name="pw2">
+        </div>
+        <div>
+            It's not currently possible to change your email address, so make sure you entered it right.
         </div>
         <div>
             <input type="submit" value="Register">
