--- a/serv2/forms/changepw.html
+++ b/serv2/forms/changepw.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/internal/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Change password</title>
 </head>
 
 <body>
