--- a/serv2/forms/changepw.html
+++ b/serv2/forms/changepw.html
@@ -13,7 +13,7 @@
     <form action="" method="POST">
         %errors%
         <div>
-            Changing password for %username%.
+            Changing password for %username%. You will be logged out of all sessions.
         </div>
         <div>
             <label for="pw">New password: </label>
