--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
         <base href="/">
         <style>
             body {
-                font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+                font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
                 margin: 0;
             }
             body.dark > #loading-msg {
