--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
         <!-- not specifying allow-reduced-script-speed since scripting can be heavy, but we don't really care about FPS in a time-tracking app -->
         <meta name="battery-savings" content="allow-reduced-framerate">
         <link rel="manifest" href="/manifest.webmanifest">
-        <link rel="apple-touch-icon" href="/icon/ttw180.png">
+        <link rel="apple-touch-icon" href="/logo/ttw180.png">
         <base href="/">
         <style>
             body {
