Fix invalid HTML

--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
         <div id="loading-msg" style="display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;min-height:100vh;background-color:white;">
             <!-- misc/loader/clock-min.svg -->
             <svg style="width:10rem;height:10rem;max-width:90vw;max-height:90vh;display:block;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="946 946 108 108"><defs/><circle cx="1000" cy="1000" r="50" fill="#fff" stroke="#000" stroke-width="8"/><circle cx="1000" cy="1000" r="6"/><svg x="946" y="946"><path fill="none" stroke="#000" stroke-width="6" d="M53.5 53.5V14" class="loader-hand" style="animation:rot 2s linear infinite"/><path fill="none" stroke="#000" stroke-width="6" d="M53.5 53.5H82" class="loader-hand" style="animation:rot 6.5s linear infinite"/></svg><style>.loader-hand{transform-origin:50% 50%}@keyframes rot{from{transform:rotate(0deg)}to{transform:rotate(360deg)}}</style></svg>
-            <div style="text-align:center;font-size:1.8rem;margin-top: 0.4rem;color:black;">Loading</span>
+            <span style="text-align:center;font-size:1.8rem;margin-top: 0.4rem;color:black;">Loading</span>
         </div>
         <div style="display: none;">
             <!-- audio files -->
