--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,15 @@
+<!-- preprocessed on start by webpack config -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TagTime Web</title>
+        <title>APPNAME</title>
         <!-- hack to load CSS async -->
         <link rel="preload" href="/flatpickr.css" as="style">
         <link rel="stylesheet" href="/flatpickr.css" media="print" onload="this.media='all'">
-        <meta name="application-name" content="TagTime Web">
-        <meta name="description" content="TagTime Web is a time-tracking web app. At random points throughout the day, it asks you what you are doing.">
+        <meta name="application-name" content="APPNAME">
+        <meta name="description" content="A time-tracking web app. At random points throughout the day, it asks you what you are doing.">
         <meta name="theme-color" content="rgb(245, 214, 112)">
         <!-- https://github.com/chrishtr/battery-savings/blob/master/explainer.md -->
         <!-- not specifying allow-reduced-script-speed since scripting can be heavy, but we don't really care about FPS in a time-tracking app -->
@@ -37,7 +38,7 @@
             window.loadStart = Date.now();
         </script>
         <noscript>
-            Sorry, Javascript is required to use TagTime Web.
+            Sorry, this web app requires Javascript.
         </noscript>
         <div id="loading-msg" style="display: flex;flex-direction: column;justify-content: center;align-items: center;text-align: center;min-height: 100vh;background-color: white;position: absolute;width: 100vw;height: 10vh;pointer-events: none;transition: 0.2s opacity;opacity: 1;">
             <!-- misc/loader/clock-min.svg -->
