add autocomplete attributes to login/signup

--- a/serv2/forms/login.html
+++ b/serv2/forms/login.html
@@ -14,11 +14,11 @@
         %errors%
         <div>
             <label for="username">Username: </label>
-            <input type="text" id="username" name="username">
+            <input type="text" id="username" name="username" autocomplete="username">
         </div>
         <div>
             <label for="pw">Password: </label>
-            <input type="password" id="pw" name="pw">      
+            <input type="password" id="pw" name="pw" autocomplete="current-password">
         </div>
         <div>
             <input type="submit" value="Login">
