--- a/serv2/forms/register.html
+++ b/serv2/forms/register.html
@@ -14,7 +14,7 @@
         %errors%
         <div>
             <label for="username">Username: </label>
-            <input type="text" id="username" name="username">
+            <input type="text" id="username" name="username" autocomplete="username">
         </div>
         <div>
             <label for="username">Email: </label>
@@ -22,11 +22,11 @@
         </div>
         <div>
             <label for="pw">Password: </label>
-            <input type="password" id="pw" name="pw">
+            <input type="password" id="pw" name="pw" autocomplete="new-password">
         </div>
         <div>
             <label for="pw">Repeat password: </label>
-            <input type="password" id="pw2" name="pw2">
+            <input type="password" id="pw2" name="pw2" autocomplete="new-password">
         </div>
         <div>
             It's not currently possible to change your email address, so make sure you entered it right.
