Use new svelte-loader fork so CSS is own file

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
         <title>APPNAME</title>
         <!-- hack to load CSS async -->
         <link rel="preload" href="/flatpickr.css" as="style">
+        <link rel="stylesheet" href="/bundle.css">
         <link rel="stylesheet" href="/flatpickr.css" media="print" onload="this.media='all'">
         <meta name="application-name" content="APPNAME">
         <meta name="description" content="A time-tracking web app. At random points throughout the day, it asks you what you are doing.">
