--- a/serv2/forms/changepw.html
+++ b/serv2/forms/changepw.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="%main%">Back to homepage</a>
+    <a href="%main%/app">Back to homepage</a>
     <form action="" method="POST">
         %errors%
         <div>
