clarify language on logout page

--- a/serv2/forms/changepw.html
+++ b/serv2/forms/changepw.html
@@ -13,7 +13,7 @@
     <form action="" method="POST">
         %errors%
         <div>
-            Changing password for %username%. You will be logged out of all sessions.
+            You are changing the password of %username%. You will be logged out everywhere.
         </div>
         <div>
             <label for="pw">New password: </label>
