Prevent double-signups client side

--- a/serv2/forms/login.html
+++ b/serv2/forms/login.html
@@ -24,6 +24,7 @@
             <input type="submit" value="Login">
         </div>
     </form>
+    <script src="forms.js" defer></script>
 </body>
 
 </html>
