--- a/serv2/forms/changepw.html
+++ b/serv2/forms/changepw.html
@@ -27,6 +27,7 @@
             <input type="submit" value="Change">
         </div>
     </form>
+    <script src="forms.js" defer></script>
 </body>
 
 </html>
