--- a/serv2/forms/register.html
+++ b/serv2/forms/register.html
@@ -35,6 +35,7 @@
             <input type="submit" value="Register">
         </div>
     </form>
+    <script src="forms.js" defer></script>
 </body>
 
 </html>
