add token support to frontend

--- a/serv2/forms/gentoken.html
+++ b/serv2/forms/gentoken.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="%main%/settings">Back to settings</a>
+    <a href="%main%/settings#import-export">Back to settings</a>
     <div>
         This will generate an API token for %username%.
         If an API token already exists, it will be revoked.
