--- a/web/app.html
+++ b/web/app.html
@@ -30,11 +30,13 @@
     </head>
     <body>
         <script>
+            // @license magnet:?xt=urn:btih:8e4f440f4c65981c5bf93c76d35135ba5064d8b7&dn=apache-2.0.txt Apache-2.0
             var __theme = localStorage["retag-theme"] || "default";
             if ((__theme === "default") && window.matchMedia && matchMedia("(prefers-color-scheme: dark)").matches) __theme = "dark";
             if (__theme === "default") __theme = "light";
             document.body.classList.add(__theme);
             window.loadStart = Date.now();
+            // @license-end
         </script>
         <noscript>
             Sorry, this web app requires Javascript.
